--- a/css/_bodyheader.css
+++ b/css/_bodyheader.css
@@ -8,6 +8,4 @@ main > header > p {
     font-size: 18px;
     font-weight: 400;
     color: #666666;
-    padding-right: 60px;
-    padding-left: 60px;
 }
