--- a/css/_footer.css
+++ b/css/_footer.css
@@ -18,7 +18,7 @@ footer > h2 {
 
 footer ul {
     list-style-type: none;
-    padding-top: 45px;
+    padding-top: 35px;
 }
 
 footer li {
