--- a/css/_generalsettings.css
+++ b/css/_generalsettings.css
@@ -1,5 +1,5 @@
 html {
-    font-family: 'Open Sans', 'Helvetica Neue', 'Bahnschrift', sans-serif;
+    font-family: 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 body {
@@ -11,4 +11,9 @@ body {
 a {
     color: inherit;
     text-decoration: none;
+}
+
+main {
+    padding-right: 60px;
+    padding-left: 60px;
 }
